--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <title>Kaleb's Portfolio</title>
+  <title>Jake's Portfolio</title>
 </head>
 
 <body>
